service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meusite
spec:
  selector:
    app.kubernetes.io/name: meusite
  ports:
    - name: http
      port: 80
      targetPort: http
